--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
         
       - name: GitHub Action for Android Lint
         uses: yutailang0119/action-android-lint@v1.0.2
+        xml_path: build/reports/lint-results.xml
+      
 
 
       # Runs a set of commands using the runners shell
