--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         uses: yutailang0119/action-android-lint@v1.0.2
       - uses: ./
         with:
-          xml_path: build/reports/lint-results.xml
+          xml_path: lint-results.xml
       
       
 
